--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "*",
     "ejs": "^2.6.1",
     "express": "*",
+    "express-validator": "^5.2.0",
     "mongojs": "^2.5.0"
   },
   "author": "Tuukka Paukkunen",
